fixed alignment

--- a/css/projects.css
+++ b/css/projects.css
@@ -16,7 +16,7 @@
     margin-top: 2em;
     justify-content: space-evenly;
     width: 100%;
-    min-height: 38vh;
+    /* min-height: 38vh; */
 }
 
 .projects {
@@ -66,7 +66,6 @@
         width: 100%;
         flex-direction: column;
         flex-wrap: unset;
-        height: 100%;
     }
 
     .projects {
